# ardilla

./: .gitignore  .readthedocs.yaml  LICENCE  README.md  discobot.sqlite3  mkdocs.yml  pyproject.toml  test.py
ardilla/: __init__.py  abc.py  crud.py  engine.py  errors.py  fields.py  logging.py  migration.py  models.py  ordering.py  queries.py  schemas.py  types.py  utils.py
ardilla/asyncio/: __init__.py  abc.py  crud.py  engine.py
docs/: ardilla_alternatives.md  changelog.md  index.md  licence.md
docs/api_ref/: crud.md  engine.md  model.md
docs/css/: custom.css
docs/guide/: crud.md  engine.md  fields.md  getting_started.md  migration.md  models.md
examples/: basic_usage.py  basic_usage_fk.py  fastapi_app.py  rep_discord_bot.py
tests/: async_test.py  sync_test.py  test_async.py  test_migration.py  test_models.py  test_sync.py
