[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ardilla"
version = "0.0.1-alpha"
authors = [
  { name="ChrisDewa", email="chrisdewa@duck.com" },
]
description = "A small package for performing basic CRUD operations with sqlite via aiosqlite and pydantic"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
]
dependencies = [
  "pydantic==1.10.7",
]

[project.optional-dependencies]
async = ["aiosqlite==0.19.0",]
dev = ["pytest==7.3.1", "pytest-asyncio==0.21.0"]

[project.urls]
"Homepage" = "https://github.com/chrisdewa/ardilla"
"Bug Tracker" = "https://github.com/chrisdewa/ardilla/issues"
