[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ardilla"
version = "0.3.4-beta"
authors = [
  { name="ChrisDewa", email="chrisdewa@duck.com" },
]
description = "Ardilla ORM. Easy to use, fast to implement, with sync and async flavors"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
]
dependencies = [
  "pydantic==1.10.7",
]


[project.optional-dependencies]
async = ["aiosqlite==0.19.0",]

examples = [
  "fastapi==0.95.1", 
  "uvicorn==0.22.0"
]

dev = [
  "pytest==7.3.1", # testing
  "pytest-asyncio==0.21.0", # testing async
  "black==23.3.0", # formating
]
docs = [
  "mkdocs==1.4.3",
  "jinja2<3.1.0",
  "mkdocstrings[python]==0.21.2",
]

[project.urls]
"Homepage" = "https://github.com/chrisdewa/ardilla"
"Bug Tracker" = "https://github.com/chrisdewa/ardilla/issues"
